--- a/KMeans_tensorflow.ipynb
+++ b/KMeans_tensorflow.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![pic](tensorboard_MNIST_KMeans.png)"
+    "![pic](tensorboard_kmeans.png)"
    ]
   },
   {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,18 @@
      "output_type": "stream",
      "text": [
       "Step 1, Avg Distance: 0.317378\n",
-      "Step 4, Avg Distance: 0.227988\n"
+      "Step 4, Avg Distance: 0.227988\n",
+      "Step 8, Avg Distance: 0.219860\n",
+      "Step 12, Avg Distance: 0.217612\n",
+      "Step 16, Avg Distance: 0.216873\n",
+      "Step 20, Avg Distance: 0.216542\n",
+      "Step 24, Avg Distance: 0.216321\n",
+      "Step 28, Avg Distance: 0.216155\n",
+      "Step 32, Avg Distance: 0.216055\n",
+      "Step 36, Avg Distance: 0.215992\n",
+      "Step 40, Avg Distance: 0.215949\n",
+      "Step 44, Avg Distance: 0.215916\n",
+      "Step 48, Avg Distance: 0.215897\n"
      ]
     }
    ],
@@ -230,14 +241,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.65770\n"
+      "Test Accuracy: 0.74180\n"
      ]
     }
    ],
@@ -266,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
