update jupyter notebook

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -4,24 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A simple practice of Logistic Regression\n",
-    "* Build a classification model\n",
+    "# A practice of Logistic Regression\n",
     "* Estimates an applicant's probability of admission based the scores from 2 exams\n",
     "* Use sklearn logistic regression\n",
-    "    * Use F1-score\n",
+    "    * Use F1-score (instead of accuracy)\n",
     "    * Use Grid search Cross Validation\n",
     "    * Use threshold in hyper tuning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
-    "dir_data = '../../../../data/data_coursera_week2/ex2/ex2data1.txt'"
+    "dir_data = './data/ex2data1.txt'"
    ]
   },
   {
@@ -72,11 +71,11 @@
    "source": [
     "# Use logistic regression model + F1-score\n",
     "## model parameters\n",
-    "* penalty: l1 or l2 regularization constraints\n",
-    "* tol: Tolerance for stopping criteria\n",
-    "* C: Inverse of regularization strength\n",
-    "* class_weight: dict or 'balanced'\n",
-    "* random_state: int, the seed of random number generator to use when shuffling the data"
+    "* **penalty**: l1 or l2 regularization constraints\n",
+    "* **tol**: Tolerance for stopping criteria\n",
+    "* **C**: Inverse of regularization strength\n",
+    "* **class_weight**: dict or 'balanced'\n",
+    "* **random_state**: int, the seed of random number generator to use when shuffling the data"
    ]
   },
   {
@@ -168,9 +167,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Use logistic regression model + F1-Score + K-folder Cross Validation + Grid Search\n",
+    "# Use logistic regression model + F1-Score + K-folder Cross Validation + Grid Search Hyper Tuning\n",
     "\n",
-    "* Defined own estimator for logistic regression\n",
+    "* Defined my own estimator for logistic regression\n",
     "* Use **F1-score** for evaluating result\n",
     "* Set **threshold** as a new tuning parameter"
    ]
